@@ -1,3 +1,8 @@
+2005-05-18	Florian Boor <florian.boor@kernelconcepts.de>
+
+	* battery.c: Start to implement reading iPaq battery information from
+	             iPaq HAL.
+
 2005-05-17	Florian Boor <florian.boor@kernelconcepts.de>
 
 	* Release Version 0.1.24
